--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,8 @@
     height: 100%;
 }
 
-#animate,
-#animate2,
-#animate3,
-#animate4,
-#animate5 {
+#animate {
     position: absolute;
     height: 6vw;
     width: 6vw;
-}
-
-#animate2 {
-    left: -5px;
 }
