--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,14 @@
     top: 50%;
 }
 
-.container {
+#container {
     position: relative;
     width: 100%;
     height: 100%;
 }
 
-#animate {
-    position: absolute;
+#kitty {
     height: 6vw;
     width: 6vw;
-    display: none;
+    position: absolute;
 }
